// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patch-package should produce patches which can be applied with npm 1`] = `
"diff --git a/node_modules/left-pad/index.js b/node_modules/left-pad/index.js
index 26f73ff..d4cc4af 100644
--- a/node_modules/left-pad/index.js
+++ b/node_modules/left-pad/index.js
@@ -22,9 +22,9 @@ var cache = [
 function leftPad (str, len, ch) {
   // convert \`str\` to \`string\`
   str = str + '';
-  // \`len\` is the \`pad\`'s length now
+  // \`len\` is the \`npm\`'s length now
   len = len - str.length;
-  // doesn't need to pad
+  // doesn't need to npm
   if (len <= 0) return str;
   // \`ch\` defaults to \`' '\`
   if (!ch && ch !== 0) ch = ' ';
@@ -32,12 +32,12 @@ function leftPad (str, len, ch) {
   ch = ch + '';
   // cache common use cases
   if (ch === ' ' && len < 10) return cache[len] + str;
-  // \`pad\` starts with an empty string
-  var pad = '';
+  // \`npm\` starts with an empty string
+  var npm = '';
   // loop
   while (true) {
-    // add \`ch\` to \`pad\` if \`len\` is odd
-    if (len & 1) pad += ch;
+    // add \`ch\` to \`npm\` if \`len\` is odd
+    if (len & 1) npm += ch;
     // divide \`len\` by 2, ditch the remainder
     len >>= 1;
     // \\"double\\" the \`ch\` so this operation count grows logarithmically on \`len\`
@@ -47,6 +47,6 @@ function leftPad (str, len, ch) {
     // \`len\` is 0, exit the loop
     else break;
   }
-  // pad \`str\`!
-  return pad + str;
+  // npm \`str\`!
+  return npm + str;
 }
"
`;

exports[`patch-package should produce patches which can be applied with yarn 1`] = `
"patch-package
--- a/node_modules/left-pad/index.js
+++ b/node_modules/left-pad/index.js
@@ -22,9 +22,9 @@ var cache = [
 function leftPad (str, len, ch) {
   // convert \`str\` to \`string\`
   str = str + '';
-  // \`len\` is the \`pad\`'s length now
+  // \`len\` is the \`yarn\`'s length now
   len = len - str.length;
-  // doesn't need to pad
+  // doesn't need to yarn
   if (len <= 0) return str;
   // \`ch\` defaults to \`' '\`
   if (!ch && ch !== 0) ch = ' ';
@@ -32,12 +32,12 @@ function leftPad (str, len, ch) {
   ch = ch + '';
   // cache common use cases
   if (ch === ' ' && len < 10) return cache[len] + str;
-  // \`pad\` starts with an empty string
-  var pad = '';
+  // \`yarn\` starts with an empty string
+  var yarn = '';
   // loop
   while (true) {
-    // add \`ch\` to \`pad\` if \`len\` is odd
-    if (len & 1) pad += ch;
+    // add \`ch\` to \`yarn\` if \`len\` is odd
+    if (len & 1) yarn += ch;
     // divide \`len\` by 2, ditch the remainder
     len >>= 1;
     // \\"double\\" the \`ch\` so this operation count grows logarithmically on \`len\`
@@ -47,6 +47,6 @@ function leftPad (str, len, ch) {
     // \`len\` is 0, exit the loop
     else break;
   }
-  // pad \`str\`!
-  return pad + str;
+  // yarn \`str\`!
+  return yarn + str;
 }
"
`;
